// Gesundheitsdaten — nur Beziehungen
//
// Erzeugt von domains/dbml/generate.sh aus domains/gesundheit-schema.sql.
// ABGELEITET — nicht von Hand pflegen. Quelle ist die geladene Datenbank,
// nicht diese Datei; Spalten, Typen und Constraints stehen in der .sql.
//
// Je Tabelle stehen ausschließlich Primär- und Fremdschlüssel, damit die
// Kanten lesbar bleiben. Tabellen anderer Domänen sind Stubs und tragen
// ihre Herkunft als Notiz.

Table health_trait_types {
  health_trait_type_id integer [pk]
}

Table health_traits {
  health_trait_id uuid [pk]
  attestation_document_id uuid
  child_id uuid
  health_trait_type_id integer
}

Table measles_presentation_types {
  measles_presentation_type_id integer [pk]
}

Table measles_proofs {
  child_id uuid [pk]
  measles_presentation_type_id integer
}

Table children [note: 'aus Stammdaten'] {
  child_id uuid
}

Table documents [note: 'aus Anmeldung'] {
  document_id uuid
}

Ref: health_traits.attestation_document_id > documents.document_id
Ref: health_traits.child_id > children.child_id
Ref: health_traits.health_trait_type_id > health_trait_types.health_trait_type_id
Ref: measles_proofs.child_id > children.child_id
Ref: measles_proofs.measles_presentation_type_id > measles_presentation_types.measles_presentation_type_id

TableGroup "Fremde Domänen" {
  children
  documents
}
